@@ -1,6 +1,6 @@
 <?php
 
-namespace PhilKra\ElasticApmLaravel\Middleware;
+namespace RafaelMilaniBarbosa\ElasticApm\Middleware;
 
 use Closure;
 use Illuminate\Support\Facades\Log;
@@ -59,8 +59,6 @@ class RecordTransaction
             'result' => $response->getStatusCode(),
             'type' => 'HTTP'
         ]);
-
-        $transaction->setSpans(app('query-log')->toArray());
 
         if (config('elastic-apm.transactions.use_route_uri')) {
             $transaction->setTransactionName($this->getRouteUriTransactionName($request));
