@@ -1,3 +1,6 @@
+2020-03-10 (5.7.6) rafaelmilanibarbosa
+    * Fix setSpans issues for Laravel
+
 2019-02-27 (5.7.6) mpetrunic
     * Fix Lumen compatibility issues
 
